name:          sodium-crypto-sign
version:       0.1
synopsis:      FFI to some of libsodium's crypto_sign_* functions.
author:        Toralf Wittner
maintainer:    Toralf Wittner <tw@dtex.org>
copyright:     (c) 2014 Toralf Wittner
license:       OtherLicense
license-file:  LICENSE
category:      Cryptography
build-type:    Simple
cabal-version: >= 1.10

description:
    FFI bindings to some of libsodium's cryptographic signature
    functions which are based on Ed25519.

source-repository head
    type:     git
    location: git://github.com/twittner/sodium-crypto-sign.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src
    ghc-options:       -Wall -O2 -fwarn-tabs
    ghc-prof-options:  -prof -auto-all

    exposed-modules:   Sodium.Crypto.Sign

    build-depends:
        base              == 4.*
      , base64-bytestring == 1.0.*
      , bytestring        >= 0.10

    pkgconfig-depends: libsodium >= 0.4.5 && < 0.7
